--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,13 @@ env_list = lint, code,
            python3.8, python3.9, python3.10, python3.11
 minversion = 4.4.4
 
+[gh-actions]
+python =
+    3.8: python3.8
+    3.9: python3.9
+    3.10: python3.10
+    3.11: python3.11
+
 [testenv]
 description = run the tests with pytest
 package = wheel
