--- a/.github/workflows/build-cbers4asat.yml
+++ b/.github/workflows/build-cbers4asat.yml
@@ -1,32 +1,11 @@
-name: Build cbers4asat
+name: Build and Publish cbers4asat
 
 on:
   push:
     tags:
       - cbers4asat-v*
 
-env:
-  PYTHON_VERSION: 3.8
-
 jobs:
-  test:
-    name: Test source code
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install test dependencies
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install hatch pytest tox black flake8
-      - name: Test
-        run: python -m hatch run test
-
   build:
     name: Build wheels and source distribution
     runs-on: ubuntu-latest
@@ -35,8 +14,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install build dependencies
-        run: python -m pip install --upgrade hatch
-
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install hatch
       - name: Build source distribution
         run: python -m hatch build
 
