--- a/.github/workflows/test-cbers4asat.yml
+++ b/.github/workflows/test-cbers4asat.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tox tox-gh-actions
+          python -m pip install tox tox-gh-actions
       - name: Test
-        run: tox
+        run: python -m tox
