--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,6 @@
 [tox]
-env_list = lint, code,
-           python3.8, python3.9, python3.10, python3.11
+env_list = linter, python3.8, python3.9, python3.10, python3.11
 minversion = 4.4.4
-
-[gh-actions]
-python =
-    3.8: python3.8
-    3.9: python3.9
-    3.10: python3.10
-    3.11: python3.11
 
 [testenv]
 description = run the tests with pytest
@@ -17,13 +9,8 @@ wheel_build_env = .pkg
 deps = pytest>=7
 commands = pytest {tty:--color=yes} {posargs}
 
-[testenv:lint]
-description = Run linter
-deps = black>=23.1
-skip_install = true
-commands = black {posargs: src/cbers4asat}
-
-[testenv:code]
+[testenv:linter]
 description = run code checker
+skip_install = true
 deps = flake8>=6
 commands = flake8 {posargs:src/cbers4asat}
