Fix: CI de testes apenas testava python 3.11

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,13 @@
 [tox]
-env_list = linter, python3.8, python3.9, python3.10, python3.11
+env_list = linter, style, py38, py39, py310, py311
 minversion = 4.4.4
+
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
 
 [testenv]
 description = run the tests with pytest
@@ -13,4 +20,10 @@ commands = pytest {tty:--color=yes} {posargs}
 description = run code checker
 skip_install = true
 deps = flake8>=6
-commands = flake8 {posargs:src/cbers4asat}
+commands = flake8 {posargs: src/cbers4asat}
+
+[testenv:style]
+description = run code formatter
+deps = black>=23.1
+skip_install = true
+commands = black --check {posargs: src/cbers4asat}
