--- a/.github/workflows/test-cbers4asat.yml
+++ b/.github/workflows/test-cbers4asat.yml
@@ -7,16 +7,19 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ '3.8', '3.9', '3.10', '3.11' ]
 
     steps:
       - uses: actions/checkout@v3
-      - name: Install test dependencies
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-      - name: Install dependencies
+          python-version: ${{ matrix.python-version }}
+      - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox
+          pip install tox tox-gh-actions
       - name: Test
-        run: python -m tox
+        run: tox
