Docs: API Python automatizada pelo mkdocstrings, novas dependências e exemplo de busca com geometria

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,19 @@
 site_name: cbers4asat
 
+theme:
+  name:
+    "readthedocs"
+
+plugins:
+  - search
+  - mkdocstrings:
+      handlers:
+        python:
+          paths: [ src ]
+
 nav:
   - Inicio: index.md
   - Instalação: installation.md
   - Guia de Usuário: quickstart.md
   - API Python: api_reference.md
   - Exemplos: examples.md
-theme: readthedocs
