--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,10 @@ python =
 description = run the tests with pytest
 package = wheel
 wheel_build_env = .pkg
-deps = pytest>=7
+deps =
+    pytest>=7
+    pytest-datafiles>=3.0.0
+    .[tools]
 commands = pytest {tty:--color=yes} {posargs}
 
 [testenv:linter]
