--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cbers4asat"
-version = "0.6.6"
+version = "0.6.7"
 description = "Biblioteca Python para consultar o catálogo e realizar operações com dados do CBERS4A"
 authors = [
     { name = "Gabriel Russo", email = "gabrielrusso@protonmail.com" }]
@@ -29,7 +29,8 @@ dev = [
 ]
 tools = [
     "rasterio>=1.3.6",
-    "numpy>=1.24.2"
+    "numpy>=1.24.2",
+    "scikit-image>=0.20.0"
 ]
 
 [build-system]
