--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cbers4asat"
 description = "Command Line interface for searching and downloading satellite imagery from CBERS-04A and AMAZONIA-1 Catalog"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Gabriel Russo <gabrielrusso@protonmail.com>"]
 
@@ -14,3 +14,4 @@ geo = "0.26.0"
 geojson = "0.24.1"
 reqwest = { version = "0.11.20", features = ["blocking", "json"] }
 serde = { version = "1.0.188", features = ["derive"] }
+serde_json = { version = "1.0.107", features = [] }
