--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-env_list = linter, style, py38, py39, py310, py311
+env_list = linter, style, py38, py39, py310, py311, py312
 minversion = 4.4.4
 
 [gh-actions]
@@ -8,6 +8,7 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
+    3.12: py312
 
 [testenv]
 description = run the tests with pytest
