--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-env_list = linter, style, py38, py39, py310, py311, py312
-minversion = 4.4.4
+env_list = linter, style, py311, py312, py313
+minversion = 4.30.2
 
 [gh-actions]
 python =
@@ -13,7 +13,7 @@ description = run the tests with pytest
 package = wheel
 wheel_build_env = .pkg
 deps =
-    pytest>=7
+    pytest>=8.4.2
     pytest-datafiles>=3.0.0
     .[tools]
 commands = pytest {tty:--color=yes} {posargs}
@@ -21,11 +21,11 @@ commands = pytest {tty:--color=yes} {posargs}
 [testenv:linter]
 description = run code checker
 skip_install = true
-deps = flake8>=6
+deps = flake8>=7.3.0
 commands = flake8 {posargs: src/cbers4asat}
 
 [testenv:style]
 description = run code formatter
-deps = black>=23.1
+deps = black>=25.9.0
 skip_install = true
 commands = black --check {posargs: src/cbers4asat}
