--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "cbers4asat"
-version = "0.9.2"
+version = "0.10.0"
 description = "Biblioteca Python para realizar a busca e processamento de imagens dos satélites CBERS-04A e AMAZONIA-1"
 authors = [
     { name = "Gabriel Russo", email = "gabrielrusso@protonmail.com" }]
 license = { file = "LICENSE" }
-keywords = ["cbers", "cbers4a", "cbers-04a", "amazonia-1", "remote sensing", "geoprocessing"]
+keywords = ["cbers", "cbers4a", "cbers-04a", "cbers-4a", "amazonia-1", "remote sensing", "geoprocessing"]
 readme = "README.md"
 requires-python = ">=3.11,<4"
 classifiers = [
@@ -17,25 +17,25 @@ classifiers = [
     "Topic :: Scientific/Engineering :: GIS"
 ]
 dependencies = [
-    "geopandas>=0.9",
-    "requests>=2.25.1",
+    "geopandas>=1.1.1",
+    "requests>=2.32.5",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "hatch>=1.6.3"
+    "hatch>=1.14.2"
 ]
 tools = [
-    "rasterio>=1.3.6",
-    "numpy>=1.24.2",
-    "scikit-image>=0.20.0",
-    "geojson>=3.0.1",
-    "geomet>=1.0.0"
+    "rasterio>=1.4.3",
+    "numpy>=2.3.3",
+    "scikit-image>=0.25.2",
+    "geojson>=3.2.0",
+    "geomet>=1.1.0"
 ]
 
 [build-system]
 build-backend = "hatchling.build"
-requires = ["hatchling>=1.11.0"]
+requires = ["hatchling>=1.27.0"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/cbers4asat"]
@@ -46,13 +46,14 @@ exclude = [
     ".github/",
     "cli/",
     ".flake8",
-    "tox.ini"
+    "tox.ini",
+    "site"
 ]
 
 [tool.hatch.envs.default]
 dependencies = [
-    "tox>=4.4.4",
-    "black>=23.1"
+    "tox>=4.30.2",
+    "black>=25.9.0"
 ]
 
 [tool.hatch.envs.default.scripts]
@@ -61,9 +62,9 @@ test = "tox"
 
 [tool.hatch.envs.docs]
 dependencies = [
-    "mkdocs>=1.4.2",
-    "mkdocstrings>=0.20.0",
-    "mkdocstrings-python>=0.8.3"
+    "mkdocs>=1.6.1",
+    "mkdocstrings>=0.30.1",
+    "mkdocstrings-python>=1.18.2"
 ]
 
 [tool.hatch.envs.docs.scripts]
